--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-main.datasource.url = jdbc:postgresql://localhost/xvspellconverter
+main.datasource.url = jdbc:postgresql://localhost/xv2
 main.datasource.username = postgres
 main.datasource.password =romualdo
 
