--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=prod
+spring.profiles.active=dev
 spring.application.name=XV Converter
 
 main.liquibase.change-log=com/company/xvspellconverter/liquibase/changelog.xml
