--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,5 @@ logging.level.io.jmix.core.AccessLogger = debug
 
 # 'debug' level logs all Jmix debug output
 logging.level.io.jmix = info
+
+jmix.rest.anonymous-url-patterns = /rest/services/convert/execute
