--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,6 @@
 main.datasource.url = jdbc:postgresql://192.168.21.35/xvspellconverter
-main.datasource.username = eduardo
-main.datasource.password = senha
-
-server.port=8082
-server.ssl.enabled=false
+main.datasource.username =${POSTGRES_USER}
+main.datasource.password =${POSTGRES_PASSWORD}
 
 vaadin.productionMode=true
 vaadin.servlet.productionMode=true
