--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-spring.profiles.active=dev
+spring.profiles.active=${spring-profile}
 spring.application.name=XV Converter
+
+server.port=8082
+server.ssl.enabled=false
+
+
+
 
 main.liquibase.change-log=com/company/xvspellconverter/liquibase/changelog.xml
 
@@ -37,4 +43,23 @@ logging.level.io.jmix.core.AccessLogger = debug
 # 'debug' level logs all Jmix debug output
 logging.level.io.jmix = info
 
+#logging.level.org.springframework.security = TRACE
+
 jmix.rest.anonymous-url-patterns = /rest/services/convert/execute
+
+# The client id is my-client
+spring.security.oauth2.authorizationserver.client.myclient.registration.client-id=${client-id}
+# The client secret (password) is my-secret
+spring.security.oauth2.authorizationserver.client.myclient.registration.client-secret=${client-secret}
+# Enable Client Credential grant for the my-client
+spring.security.oauth2.authorizationserver.client.myclient.registration.authorization-grant-types=client_credentials
+# Client credentials must be passed in the Authorization header using the HTTP Basic authentication scheme
+spring.security.oauth2.authorizationserver.client.myclient.registration.client-authentication_methods=client_secret_basic
+# Use opaque tokens instead of JWT
+spring.security.oauth2.authorizationserver.client.myclient.token.access-token-format=reference
+# access token time-to-live
+spring.security.oauth2.authorizationserver.client.myclient.token.access-token-time-to-live=1h
+
+# my-client is the client id we configured previously
+jmix.authserver.client.myclient.client-id = ${client-id}
+jmix.authserver.client.myclient.resource-roles = anonymous-role
